<resources>
    <string name="app_name">miCash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_notice">Please enter your full name and mobile phone number as it is in your bank account details.</string>
    <string name="register_agreement">By clicking Register, we assume you have read and agreed to our <u>Terms and Conditions</u></string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_enter_mobile">Phone Number</string>
    <string name="hint_name">Your Name</string>
    <string name="register_button">REGISTER</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_message">You\'re welcome. With advanced features and quick response,  we guarantee you will have a great experience using our app.</string>
    <string name="get_started">GET STARTED</string>
    <string name="verify_notice">We have sent you a 6-digit OTP. Please enter it here and click VERIFY to proceed.</string>
    <string name="verify_confirm_notice">We have successfully verified your phone number. Click GET STARTED to continue.</string>
    <string name="phone_notice">Please enter the mobile phone number connected to your bank account here. We will send a 6-digit OTP code to the number.</string>
    <string name="profile_complete_notice">We have successfully created your profile. Click GET STARTED to proceed.</string>
    <string name="profile_notice">We\'ve created your account. Select a profile image by touching the image below and click SAVE.</string>

    <string name="sendotp_key">172464Aw7a14zwC59a7dc10</string>
    <string name="new_login_notice">Welcome to miCash. Please enter your email and password to login or Register a new account.</string>
    <string name="resume_notice">Welcome <b>%1$s</b>. Please enter your password to login.</string>
    <string name="edit_number"> <u>Edit number</u> </string>

    <string name="terms_and_conditions">These terms and conditions govern your use of miCash app. If you do not agree to all our terms and conditions, please do not use the app. If you do use the app, your conduct indicates that you agree to be bound by the terms.
        \n\n<b>Indemnity:</b> In order to use the app, you must agree to be legally bound and to abide by the terms and to indemnify and hold miCash harmless from all alleged or actual damages, loss, claims, and expenses relating to any guarantee or representations made by miCash. The use of this app for any reason is deemed to be an agreement of this condition.

        Whilst miCash will endeavour to make this app constantly accessible and functional for your use, it does not warranty or guarantee that the app will be uninterrupted or error-free at anytime. miCash accepts no responsibility for keeping the informations in the app upto date or liability for failure to do so.
        \n\n<b>Passwords:</b> Passwords must not be disclosed to any person. If you become aware of any unauthorized disclosure of your password, then you must notify us immediately. You will remain liable for all activities carried out under access with your password unless and until you have notified miCash of a password breach and we have acknowledged same.
        \n\n<b>Validity:</b> If any term, condition or provision of these terms is determined to be unlawful, invalid, void or for any reason unenforceable, the validity and enforceability of the remaining terms, conditions and provisions shall not in any way be affected or impaired thereby.
        \n\n<b>Other Conditions:</b> When a loan is disbursed to your account, the interest is not calculated in the number of days, rather it is viewed in months;  this means that any loan disbursed on or before the 23rd of any month, the full months interest would be applied. However, loans disbursed after the 23rd of any month, the interest for the remaining number of days of that particular month will be waived, and therefore the interest repayment starts from the next month.
        \n\nA default fee of double the interest rate the loan was given shall be charged on any outstanding unpaid obligation without recourse to the borrower.
        \n\nIn the event of default by a borrower, miCash reserves the right at its discretion to transfer the defaulting account/ledger to a third party agency to recover any outstanding debt due to miCash.

    </string>

    <string-array name="employment_status_array">
        <item>Select Employment Status</item>
        <item>Employed</item>
        <item>Unemployed</item>
        <item>Business/Self-employed</item>
        <item>Retired</item>
        <item>Student</item>
    </string-array>

    <string-array name="states_array">
        <item>Select State</item>
        <item>Abuja</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa-Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross-River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Kastina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
</resources>
