<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:paddingBottom="@dimen/layout_top_bottom_padding"
    tools:context="ng.com.bitlab.micash.ui.register.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/top"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_29sdp"
            android:src="@drawable/logo_white"/>

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_13sdp"
            android:textColor="@color/whiteText"
            android:text="@string/register_notice"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteText">

            <EditText
                android:layout_gravity="center"
                app:backgroundTint="@color/whiteText"
                android:id="@+id/editTextName"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25sdp"
                android:hint="@string/hint_name"
                android:textColor="@color/whiteText"
                android:inputType="textPersonName"
                android:textSize="@dimen/_14ssp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteText">

            <EditText
                android:layout_gravity="center"
                app:backgroundTint="@color/whiteText"
                android:textColor="@color/whiteText"
                android:id="@+id/editTextEmail"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25sdp"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14ssp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteText">

            <EditText
                android:layout_gravity="center"
                app:backgroundTint="@color/whiteText"
                android:textColor="@color/whiteText"
                android:id="@+id/editTextPassword"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="Your Password"
                android:textSize="@dimen/_14ssp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_24sdp"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/btn_register_bg"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/btn_register_color"
            android:layout_marginBottom="@dimen/_13sdp"
            />

        <LinearLayout
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_agreement"
                app:buttonTint="@color/whiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"/>

            <TextView
                android:id="@+id/tv_agreement"
                android:buttonTint="@color/whiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_agreement"
                android:textColor="@drawable/white_text_button_color"
                android:textSize="@dimen/_10ssp"
                android:textAlignment="center"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>