<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:maskededittext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ng.com.bitlab.micash.ui.verify.VerifyActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_39sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_blue"/>



    <RelativeLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/iv_logo"
        android:visibility="visible">




        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/phone_notice"
            android:textSize="@dimen/_15ssp"/>


        <com.github.reinaldoarrosi.maskededittext.MaskedEditText
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_notice"
            android:hint="080 1234 56 78"
            android:backgroundTint="@color/colorPrimaryText"
            android:layout_marginTop="@dimen/_30sdp"
            maskededittext:mask="9999 999 99 99"
            android:inputType="phone"
            android:id="@+id/editTextPhone"
            android:textSize="@dimen/_30ssp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_request_code"
            android:background="@drawable/btn_blue"
            android:layout_width="@dimen/widgets_width_large"
            android:layout_height="wrap_content"
            android:text="REQUEST CODE"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/blue_button_text_color"
            android:layout_below="@+id/editTextPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_26sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/iv_logo"
        android:visibility="gone">

        <TextView
            android:id="@+id/profile_notice"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/profile_notice"
            android:textSize="@dimen/_15ssp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/profile"
            app:civ_border_width="0.5dp"
            app:civ_border_color="#FF000000"
            android:layout_below="@+id/profile_notice"
            android:layout_centerHorizontal="true"/>


        <Button
            android:id="@+id/btn_set_profile_image"
            android:background="@drawable/btn_blue_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/blue_button_text_color"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="@dimen/_26sdp" />


        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SKIP"
            android:textColor="@color/colorPrimaryText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_16ssp"
            android:layout_below="@+id/btn_set_profile_image"
            android:backgroundTint="@color/colorPrimaryText"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/iv_logo"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_verify_notice"
            android:layout_width="@dimen/widgets_width_large"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/verify_notice"
            android:textSize="@dimen/_15ssp"/>


        <com.github.reinaldoarrosi.maskededittext.MaskedEditText
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_verify_notice"
            android:hint="000-000"
            android:backgroundTint="@color/colorPrimaryText"
            android:layout_marginTop="@dimen/_30sdp"
            maskededittext:mask="999-999"
            android:id="@+id/editTextCode"
            android:textSize="@dimen/_30ssp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_verify"
            android:background="@drawable/btn_blue"
            android:layout_width="@dimen/widgets_width_large"
            android:layout_height="wrap_content"
            android:text="VERIFY"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/blue_button_text_color"
            android:layout_below="@+id/editTextCode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_26sdp" />


        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resend OTP"
            android:textColor="@color/colorPrimaryText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_16ssp"
            android:layout_below="@+id/btn_verify"
            android:backgroundTint="@color/colorPrimaryText"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/completed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textSize="@dimen/_30ssp"
            android:textAlignment="center"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/_90sdp"
            android:textColor="@color/colorPrimaryText"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_welcome_header"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/profile_complete_notice"
            android:textSize="@dimen/_13ssp"/>


        <Button
            android:id="@+id/btn_get_started"
            android:background="@drawable/btn_blue"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textStyle="bold"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/blue_button_text_color"
            android:layout_below="@+id/tv_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_45sdp"
            />



    </RelativeLayout>


</RelativeLayout>
