<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context="ng.com.bitlab.micash.ui.upload.UploadActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_29sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_blue"/>


    <RelativeLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/iv_logo"
        android:visibility="gone">

        <TextView
            android:id="@+id/profile_notice"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/profile_notice"
            android:textSize="@dimen/_12ssp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/profile"
            app:civ_border_width="0.5dp"
            app:civ_border_color="#FF000000"
            android:layout_below="@+id/profile_notice"
            android:layout_centerHorizontal="true"/>


        <Button
            android:id="@+id/btn_set_profile_image"
            android:background="@drawable/btn_blue_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/blue_button_text_color"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="@dimen/_26sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_set_profile_image"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_skip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I'll do this "
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"
                android:backgroundTint="@color/colorPrimaryText"
                />

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Later "
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"
                android:backgroundTint="@color/colorPrimaryText"
                />

        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/completed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textSize="@dimen/_30ssp"
            android:textAlignment="center"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/_90sdp"
            android:textColor="@color/colorPrimaryText"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_welcome_header"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/profile_complete_notice"
            android:textSize="@dimen/_13ssp"/>


        <Button
            android:id="@+id/btn_get_started"
            android:background="@drawable/btn_blue"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textStyle="bold"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/blue_button_text_color"
            android:layout_below="@+id/tv_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_45sdp"
            />

    </RelativeLayout>


</RelativeLayout>
